# SmartScope-connector

./: LICENSE  README.md  pyproject.toml
smartscope_connector/: commands.py
smartscope_connector/Datatypes/: querylist.py
smartscope_connector/api_interface/: __init__.py  decorators.py  rest_api_interface.py
smartscope_connector/api_interface/tests/: decorators_tests.py  rest_api_interface_tests.py  tests_rest_api_interface.py
smartscope_connector/lib/: file_actions.py
smartscope_connector/models/: __init__.py  atlas.py  extra_property_mixin.py  grid.py  hole.py  hole_type.py  microscope.py  screening_session.py  square.py  target.py  target_label.py
